orgs/shareit/grafana/namespace.yaml
# create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: tools
  labels:
    name: tools
