orgs/shareit/grafana/deploy.yaml
# create a deploy to start a grafana instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:12.3.0-18578466485-ubuntu
        ports:
        - containerPort: 3000
