orgs/shareit/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tools
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: grafana
